Prevent page jumpiness by hiding title with CSS

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -59,3 +59,9 @@
   position: absolute;
   width: calc(100% + var(--spacing-base));
 }
+
+@media screen and (max-width: 700px) {
+  .JobTitleContainer {
+    display: none;
+  }
+}
